--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
     <div class="stats-box">
       <div class="stat">
         <h3>Collateral Ratio</h3>
-        <p>80% <small>(Example)</small></p>
+        <p>80% <small></small></p>
       </div>
       <div class="stat">
         <h3>Reserves (USD)</h3>
-        <p>$1,000,000 <small>(Example)</small></p>
+        <p>> $1,000,000 <small>(infinite)</small></p>
       </div>
       <div class="stat">
         <h3>PSC Market Cap</h3>
-        <p>$2,500,000 <small>(Example)</small></p>
+        <p> > $2,500,000 <small>(infinite)</small></p>
       </div>
     </div>
   </section>
@@ -189,9 +189,9 @@
         on <a href="#" target="_blank">audit PDF/report</a>.</li>
       <li><strong>Social Links:</strong>
         <ul>
-          <li>Discord: <a href="#" target="_blank">discord.gg/YourProject</a></li>
-          <li>Twitter: <a href="#" target="_blank">@YourProject</a></li>
-          <li>GitHub: <a href="#" target="_blank">github.com/YourOrg</a></li>
+          <li>Website: <a href="https://powerstablecoin.github.io/PSC/" target="_blank"></a></li>
+          <li>Twitter: <a href="https://x.com/DPSC2025" target="_blank"></a></li>
+          <li>GitHub: <a href="https://github.com/PowerStableCoin/PSC/" target="_blank"></a></li>
         </ul>
       </li>
     </ul>
