--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
         on <a href="#" target="_blank">audit PDF/report</a>.</li>
       <li><strong>Social Links:</strong>
         <ul>
-          <li>Website: <a href="https://powerstablecoin.github.io/PSC/" target="_blank"></a></li>
-          <li>Twitter: <a href="https://x.com/DPSC2025" target="_blank"></a></li>
-          <li>GitHub: <a href="https://github.com/PowerStableCoin/PSC/" target="_blank"></a></li>
+          <li>Website: <a href="https://powerstablecoin.github.io/PSC/" target="_blank">PowerStableCoin-Project</a></li>
+          <li>Twitter: <a href="https://x.com/DPSC2025" target="_blank">@PowerStableCoin</a></li>
+          <li>GitHub: <a href="https://github.com/PowerStableCoin/PSC/" target="_blank">PowerStableCoin-Repo</a></li>
         </ul>
       </li>
     </ul>
