--- a/index.html
+++ b/index.html
@@ -1,23 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAOPowerStableCoin Whitepaper</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; color: #333; }
-        header { text-align: center; margin-bottom: 40px; }
-        h1 { font-size: 2.5em; margin-bottom: 0; color: #2C3E50; }
-        h2 { font-size: 2em; color: #2C3E50; border-bottom: 2px solid #2C3E50; padding-bottom: 8px; margin-bottom: 20px; }
-        h3 { font-size: 1.5em; color: #34495e; margin-top: 30px; }
-        section { margin-bottom: 40px; }
-        ul, ol { margin-left: 20px; }
-        footer { text-align: center; font-size: 0.9em; color: #777; margin-top: 40px; }
-        .container { max-width: 900px; margin: 0 auto; }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+            color: #333;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 0;
+            color: #2C3E50;
+        }
+        h2 {
+            font-size: 2em;
+            color: #2C3E50;
+            border-bottom: 2px solid #2C3E50;
+            padding-bottom: 8px;
+            margin-bottom: 20px;
+        }
+        h3 {
+            font-size: 1.5em;
+            color: #34495e;
+            margin-top: 30px;
+        }
+        section {
+            margin-bottom: 40px;
+        }
+        ul, ol {
+            margin-left: 20px;
+        }
+        footer {
+            text-align: center;
+            font-size: 0.9em;
+            color: #777;
+            margin-top: 40px;
+        }
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+        }
     </style>
 </head>
-
 <body>
     <div class="container">
         <header>
@@ -29,16 +61,14 @@
         <section id="abstract">
             <h2>Abstract</h2>
             <p>
-                DAOPowerStableCoin (PSC) is a collateral-backed, decentralized stablecoin designed with integrated payment rewards, staking, and DAO governance. By locking approved collateral, PSC maintains its stability while incentivizing user engagement through bonus
-                rewards and yield opportunities.
+                DAOPowerStableCoin (PSC) is a collateral-backed, decentralized stablecoin designed with integrated payment rewards, staking, and DAO governance. By locking approved collateral, PSC maintains its stability while incentivizing user engagement through bonus rewards and yield opportunities.
             </p>
         </section>
 
         <section id="introduction">
             <h2>Introduction</h2>
             <p>
-                In the rapidly evolving landscape of decentralized finance (DeFi), stablecoins have become essential for enabling frictionless payments and a reliable store of value. However, many stablecoins suffer from centralization or lack of user incentives. DAOPowerStableCoin
-                addresses these issues by offering a robust, transparent, and user-incentivized stablecoin platform that integrates collateral management, bonus rewards for payments, staking, and decentralized governance.
+                In the rapidly evolving landscape of decentralized finance (DeFi), stablecoins have become essential for enabling frictionless payments and a reliable store of value. However, many stablecoins suffer from centralization or lack of user incentives. DAOPowerStableCoin addresses these issues by offering a robust, transparent, and user-incentivized stablecoin platform that integrates collateral management, bonus rewards for payments, staking, and decentralized governance.
             </p>
         </section>
 
@@ -124,8 +154,7 @@
         <section id="conclusion">
             <h2>Conclusion</h2>
             <p>
-                DAOPowerStableCoin is designed to deliver a secure, efficient, and engaging stablecoin experience. By combining collateral backing, payment bonuses, staking rewards, and decentralized governance, PSC aims to offer a comprehensive solution for everyday
-                transactions in the DeFi ecosystem.
+                DAOPowerStableCoin is designed to deliver a secure, efficient, and engaging stablecoin experience. By combining collateral backing, payment bonuses, staking rewards, and decentralized governance, PSC aims to offer a comprehensive solution for everyday transactions in the DeFi ecosystem.
             </p>
         </section>
 
@@ -134,5 +163,4 @@
         </footer>
     </div>
 </body>
-
 </html>
