--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DAOPowerStableCoin Whitepaper1</title>
+    <title>DAOPowerStableCoin Whitepaper</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,7 +56,7 @@
         <header>
             <h1>DAOPowerStableCoin</h1>
             <p><strong>Whitepaper</strong> – Empowering a Decentralized Stablecoin Ecosystem</p>
-            <p>Date: April 2025</p>
+            <p>Date: March 2025</p>
         </header>
 
         <section id="abstract">
